# Connections

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  batch_enrich.py  commit_and_push.sh  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  scrape_to_csv.py  start.sh  test_openai_key.py  test_scraper.py  test_scraper2.py
.claude/: launch.json  settings.local.json
backend/api/: dependencies.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
investigator/: __main__.py  cli.py  config.py  mcp_server.py  orchestrator.py
investigator/extraction/: dedup.py  extractor.py  fetcher.py
investigator/llm/: chunker.py  client.py  prompts.py
investigator/report/: formatter.py  writer.py
investigator/search/: engine.py  queries.py
investigator/sections/: activity.py  articles.py  base.py  comments.py  content.py  experience.py  expertise.py  news.py  posts.py  professional.py  social.py  thesis.py
scripts/: batch_enrich.py  enrich.py  setup_notion.py  update_matches_schema.py
src/: config.py
src/data/: advisory_titles.py  csv_import.py  dealigence.py  investigator_runner.py  lead_csv_exporter.py  linkedin.py  linkedin_clipboard_scraper.py  linkedin_finder.py  linkedin_profile_parser.py  linkedin_scraper.py  llm_parser.py  notion_store.py
src/engine/: index.py  matcher.py
src/models/: contact.py  lead.py  match.py
src/pages/: _cached_data.py  _enrichment_ui.py  _store.py  _table_helpers.py  contacts.py  dashboard.py  leads.py  (+3 more)
tests/: test_index.py  test_matcher.py  test_rules.py
(+28 files in other folders)
